# accomps

./: .dockerignore  .gitignore  README-DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vercel.json
.github/: copilot-instructions.md
agent/: .gitignore  Dockerfile  README.md  README_langchain.md  cache.py  main.py  main_langchain.py  mcp_server.py  parser_chain.py  pyproject.toml  schemas.py  server.py  tool.py  tool_helpers.py  tool_langchain.py
cloudflared/: config.yml.example
prisma/: dev.db  schema.prisma
prisma/migrations/20250624163135_init/: migration.sql
prisma/migrations/20250715170343_init_postgresql/: migration.sql
prisma/migrations/20260121212350_pending_accomps/: migration.sql
src/: middleware.ts  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/accomplishments/: page.tsx
src/app/api/agent/accomplishments/: route.ts
src/app/api/agent/categories/: route.ts
src/app/api/agent/tags/: route.ts
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/calendar/: page.tsx
src/app/login/: page.tsx
src/app/tags/: page.tsx
src/app/tags/[tagName]/: page.tsx
src/components/: accomplishments-calendar.tsx  accomplishments-list.tsx  add-accomplishment-form.tsx  confirm-dialog.tsx  edit-accomplishment-form.tsx  sidebar-nav.tsx  stats-overview.tsx
src/lib/: actions.ts  api-auth.ts  auth.ts  db.ts  helpers.ts  hooks.ts  types.ts  utils.ts
src/scripts/: testSend.ts
(+4 files in other folders)
