[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]


[project]
name = "accomps"
version = "0.1.0"
description = ""
authors = [{ name = "Shargrove09", email = "8881163+Shargrove09@users.noreply.github.com " }]
requires-python = "~=3.12"
readme = "README.md"
